@@ -1,6 +1,11 @@
 # -*- coding: utf-8; tab-width: 4; -*-
 # ex: set fileencoding=utf-8 softtabstop=4 tabstop=4 expandtab:
 
+2013-12-06 Michael Truog   <mjtruog [at] gmail (dot) com>
+
+    * Change the cloudi_service_map_reduce:cloudi_service_map_reduce_new/3
+      callback functionality to be more useful for algorithm initialization
+
 2013-12-04 Michael Truog   <mjtruog [at] gmail (dot) com>
 
     * cloudi_service_http_cowboy support added for outgoing (CloudI->websocket)
